wei: setup third env with ceph 15 on ubuntu 20.04

--- a/roles/ceph-common/vars/main.yml
+++ b/roles/ceph-common/vars/main.yml
@@ -6,7 +6,8 @@ debian_ceph_pkgs:
   - "ceph-common"
   - "{{ ((ceph_repository == 'rhcs') and (mon_group_name in group_names)) | ternary('ceph-mon', 'ceph-common') }}"
   - "{{ ((ceph_repository == 'rhcs') and (osd_group_name in group_names)) | ternary('ceph-osd', 'ceph-common') }}"
-  - "{{ (osd_group_name in group_names) | ternary('ceph-volume', 'ceph-common') }}"
+  - "{{ ((ceph_stable_distro_source == 'focal') and (osd_group_name in group_names)) | ternary('ceph-osd', 'ceph-common') }}"
+  - "{{ ((ceph_stable_distro_source != 'focal') and (osd_group_name in group_names)) | ternary('ceph-volume', 'ceph-common') }}"
   - "{{ (ceph_test | bool) | ternary('ceph-test', 'ceph-common') }}"
   - "{{ (rgw_group_name in group_names) | ternary('radosgw', 'ceph-common') }}"
   - "{{ ((ceph_repository == 'rhcs') and (client_group_name in group_names)) | ternary('ceph-fuse', 'ceph-common') }}"
@@ -17,7 +18,6 @@ redhat_ceph_pkgs:
   - "ceph-common"
   - "{{ (mon_group_name in group_names) | ternary('ceph-mon', 'ceph-common') }}"
   - "{{ (osd_group_name in group_names) | ternary('ceph-osd', 'ceph-common') }}"
-  - "{{ (osd_group_name in group_names) | ternary('ceph-volume', 'ceph-common') }}"
   - "{{ (client_group_name in group_names) | ternary('ceph-fuse', 'ceph-common') }}"
   - "{{ (client_group_name in group_names) | ternary('ceph-base', 'ceph-common') }}"
   - "{{ (rgw_group_name in group_names) | ternary('ceph-radosgw', 'ceph-common') }}"
@@ -28,7 +28,6 @@ suse_ceph_pkgs:
   - "ceph-common"
   - "{{ (mon_group_name in group_names) | ternary('ceph-mon', 'ceph-common') }}"
   - "{{ (osd_group_name in group_names) | ternary('ceph-osd', 'ceph-common') }}"
-  - "{{ (osd_group_name in group_names) | ternary('ceph-volume', 'ceph-common') }}"
   - "{{ (client_group_name in group_names) | ternary('ceph-fuse', 'ceph-common') }}"
   - "{{ (client_group_name in group_names) | ternary('ceph-base', 'ceph-common') }}"
   - "{{ (rgw_group_name in group_names) | ternary('ceph-radosgw', 'ceph-common') }}"
