--- a/raw_install_python.yml
+++ b/raw_install_python.yml
@@ -45,7 +45,7 @@
       when: stat_dnf3.rc == 0 or stat_yum.rc == 0
 
     - name: install python for debian based OS
-      raw: apt-get -y install python-simplejson
+      raw: apt-get -y install python3 python-is-python3
       register: result
       until: result is succeeded
       when: stat_apt.rc == 0
