--- a/roles/ceph-validate/tasks/check_repository.yml
+++ b/roles/ceph-validate/tasks/check_repository.yml
@@ -16,4 +16,4 @@
   when:
     - ceph_origin == 'repository'
     - ceph_repository == 'community'
-    - ceph_stable_release not in ['quincy']
+    - ceph_stable_release not in ['quincy', 'octopus']
